--- a/app/src/main/res/layout/activity_benificial_owner_details.xml
+++ b/app/src/main/res/layout/activity_benificial_owner_details.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.business.BenificialOwnerDetails"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.business.BenificialOwnerDetails">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,15 +40,16 @@
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
     </RelativeLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_11sdp"
         android:layout_marginStart="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_11sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_14sdp"
-        >
+        app:cardCornerRadius="@dimen/_10sdp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,50 +58,48 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Jonathan Joestar"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_16sdp"
-                android:textSize="@dimen/_16ssp"
-                android:textColor="@color/primary_black"
+                android:layout_marginBottom="@dimen/_2sdp"
                 android:fontFamily="@font/opensans_bold"
-                android:layout_marginBottom="@dimen/_2sdp"/>
+                android:text="Jonathan Joestar"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                >
+                android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
+                    android:fontFamily="@font/opensans_semibold"
                     android:text="Primary Owner"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:layout_marginBottom="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_5sdp"
-                    />
+                    android:textSize="@dimen/_12ssp" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_icon_awesome_star"
-                    />
+                    android:src="@drawable/ic_icon_awesome_star" />
             </LinearLayout>
-<!--            <ImageView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/owneship_percent"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginBottom="@dimen/_21sdp"-->
-<!--                />-->
+            <!--            <ImageView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:src="@drawable/owneship_percent"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:layout_marginBottom="@dimen/_21sdp"-->
+            <!--                />-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_16sdp"
-                >
+                android:layout_marginBottom="@dimen/_16sdp">
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
@@ -107,8 +107,8 @@
                     android:layout_width="180dp"
                     android:layout_height="130dp"
                     android:layout_centerInParent="true"
-                    android:progress="10"
-                    android:progressDrawable="@drawable/progressbar_bg1" />
+                    android:progress="10"/>
+<!--                    android:progressDrawable="@drawable/progressbar_bg1" />-->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -120,8 +120,8 @@
                         android:id="@+id/percentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
                         android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_semibold"
                         android:text="25%"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_18ssp" />
@@ -143,116 +143,108 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Details"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/primary_black"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_7sdp"
-        />
+        android:fontFamily="@font/opensans_bold"
+        android:text="Details"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/_12ssp" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_11sdp"
-        >
+        app:cardCornerRadius="@dimen/_10sdp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/_5sdp"
             android:paddingStart="@dimen/_11sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            >
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_10sdp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date of Birth"
-                android:textSize="@dimen/_11ssp"
-                android:fontFamily="@font/opensans_regular"
-                android:textColor="@color/xdark_gray"
                 android:layout_marginTop="@dimen/_9sdp"
                 android:layout_marginBottom="@dimen/_1sdp"
-                />
+                android:fontFamily="@font/opensans_regular"
+                android:text="Date of Birth"
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/_11ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_7sdp"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="August 23, 1991"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
                 android:textColor="@color/primary_black"
-                android:layout_marginBottom="@dimen/_7sdp"
-                />
+                android:textSize="@dimen/_12ssp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/light_gray"
                 android:layout_marginBottom="@dimen/_9sdp"
-                />
+                android:background="@color/light_gray" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_1sdp"
+                android:fontFamily="@font/opensans_regular"
                 android:text="Mailing Address"
-                android:textSize="@dimen/_11ssp"
-                android:fontFamily="@font/opensans_regular"
                 android:textColor="@color/xdark_gray"
-                android:layout_marginBottom="@dimen/_1sdp"
-                />
+                android:textSize="@dimen/_11ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_7sdp"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="3131 Camino Del Rio, San Diego,\nCA, 92108"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
                 android:textColor="@color/primary_black"
-                android:layout_marginBottom="@dimen/_7sdp"
-                />
+                android:textSize="@dimen/_12ssp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/light_gray"
                 android:layout_marginBottom="@dimen/_9sdp"
-                />
+                android:background="@color/light_gray" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SSN"
-                android:textSize="@dimen/_11ssp"
-                android:fontFamily="@font/opensans_regular"
-                android:textColor="@color/xdark_gray"
                 android:layout_marginBottom="@dimen/_1sdp"
-                />
+                android:fontFamily="@font/opensans_regular"
+                android:text="SSN"
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/_11ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="•••-••-••23"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_black"
                 android:layout_marginBottom="@dimen/_7sdp"
-                />
+                android:fontFamily="@font/opensans_semibold"
+                android:text="•••-••-••23"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/light_gray"
                 android:layout_marginBottom="@dimen/_17sdp"
-                />
-
-
-
-
-
+                android:background="@color/light_gray" />
 
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
 
 
 </LinearLayout>
