--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -207,7 +207,7 @@
                     </RelativeLayout>
 
                     <LinearLayout
-                        android:id="@+id/oldnewMatchTV"
+                        android:id="@+id/passwordErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
@@ -221,14 +221,14 @@
                             android:src="@drawable/ic_erro" />
 
                         <TextView
-                            android:id="@+id/ssnErrorTV"
+                            android:id="@+id/passwordErrorTV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:text="New password should not match with Old password"
                             android:textColor="@color/error_red"
-                            android:textSize="11sp" />
+                            android:textSize="@dimen/_10ssp" />
                     </LinearLayout>
 
                     <TextView
@@ -281,6 +281,29 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <LinearLayout
+                        android:id="@+id/confPassErrorLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/_12sdp"
+                            android:layout_height="@dimen/_12sdp"
+                            android:src="@drawable/ic_erro" />
+
+                        <TextView
+                            android:id="@+id/confPassErrorTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:textColor="@color/error_red"
+                            android:textSize="@dimen/_10ssp" />
+                    </LinearLayout>
                 </LinearLayout>
             </ScrollView>
 
