--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -179,7 +179,7 @@
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
                                     android:inputType="numberDecimal"
-                                    android:maxLength="30"
+                                    android:maxLength="@string/maxlength"
                                     android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
