--- a/app/src/main/res/layout/activity_withdraw_payment_methods.xml
+++ b/app/src/main/res/layout/activity_withdraw_payment_methods.xml
@@ -35,4 +35,9 @@
         android:id="@+id/firstError"
         layout="@layout/activity_first_tym_fail"
         android:visibility="gone" />
+
+    <include
+        android:id="@+id/banksuccess"
+        layout="@layout/activity_all_done_success"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
