--- a/app/src/main/res/layout/activity_dbainfo_btm_sheet.xml
+++ b/app/src/main/res/layout/activity_dbainfo_btm_sheet.xml
@@ -46,6 +46,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/diffLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -68,7 +69,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/sameBtnLL"
+                android:id="@+id/sameLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
