--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -38,7 +38,7 @@
                         android:scaleType="fitXY"
                         android:padding="2dp"
                         android:contentDescription="@string/user_details"
-                        android:src="@drawable/"
+                        android:src="@drawable/acct_profile"
                         android:visibility="visible" />
 
                     <TextView
