--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -335,7 +335,8 @@
                     android:id="@+id/timeZoneCL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp">
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:visibility="gone">
 
                     <ImageButton
                         android:id="@+id/timezoneButton"
