--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -20,8 +20,16 @@
             android:id="@+id/cancelIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:src="@drawable/ic_x" />
+
+        <ImageView
+            android:id="@+id/backIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:src="@drawable/ic_back"
+            android:visibility="gone" />
 
         <View
             android:id="@+id/viewBarLeft"
@@ -224,7 +232,6 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp"
                 android:layout_marginBottom="@dimen/_14sdp">
 
                 <ImageButton
@@ -278,50 +285,58 @@
                 </com.google.android.material.textfield.TextInputLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <RadioGroup
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_13sdp"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/ecomerceRB"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    android:theme="@style/AppTheme" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/_11sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="eCommerce"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    <ImageView
+                        android:id="@+id/ecomerceRB"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:src="@drawable/ic_rb_selected" />
 
-                <RadioButton
-                    android:id="@+id/retailRB"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    android:theme="@style/AppTheme" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/_6sdp"
+                        android:layout_marginEnd="@dimen/_11sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="eCommerce"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="Retail Location "
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
-            </RadioGroup>
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/retailRB"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:src="@drawable/ic_rb_unselected" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/_6sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="Retail Location "
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp" />
+                </LinearLayout>
+            </LinearLayout>
 
             <com.greenbox.coyni.utils.outline_et.WebsiteOutlineEditText
                 android:id="@+id/WebsiteET"
@@ -346,6 +361,71 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_14sdp" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/timezoneCL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:visibility="visible">
+
+                <ImageButton
+                    android:id="@+id/timezoneIV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:src="@drawable/ic_down"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/timezoneTIL"
+                    app:layout_constraintHorizontal_bias="0.952"
+                    app:layout_constraintStart_toStartOf="@+id/timezoneTIL"
+                    app:layout_constraintTop_toTopOf="@+id/timezoneTIL"
+                    app:layout_constraintVertical_bias="0.507"
+                    app:layout_editor_absoluteX="336.24dp"
+                    app:layout_editor_absoluteY="26.28dp" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/timezoneTIL"
+                    style="@style/TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Select Time Zone"
+                    android:textColorHint="@color/light_gray"
+                    app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
+                    app:hintTextColor="@color/primary_green"
+                    tools:ignore="MissingConstraints">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/timezoneET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="creditCardSecurityCode"
+                        android:cursorVisible="false"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:imeOptions="actionNext"
+                        android:importantForAutofill="no"
+                        android:inputType="textEmailAddress|textNoSuggestions"
+                        android:maxLines="1"
+                        android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
+                        android:textColor="@color/text_color"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textSize="@dimen/_12ssp" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="Your merchant batch automatically pays out at 11:59:59pm in your selected time zone."
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/_10ssp" />
 
             <LinearLayout
                 android:id="@+id/dbafillingLL"
@@ -441,16 +521,6 @@
                     android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_27sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="Saved automatically"
-                android:textColor="@color/dark_grey"
-                android:textSize="@dimen/_11ssp" />
         </LinearLayout>
     </ScrollView>
 
