--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -16,7 +16,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_25sdp"
@@ -43,7 +42,7 @@
 
         </LinearLayout>
 
-        <com.greenbox.coyni.utils.outline_et.CompanyOutLineBoxPhoneNumberEditText
+        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/companypnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
