--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -26,6 +26,7 @@
                 android:orientation="horizontal">
 
                 <RelativeLayout
+                    android:id="@+id/rl_user_icon_layout"
                     android:layout_width="@dimen/_50sdp"
                     android:layout_height="@dimen/_50sdp"
                     android:layout_gravity="center_vertical"
