--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -60,6 +60,7 @@
             android:id="@+id/tvCardHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="Add New Debit Card"
             android:textColor="@color/black"
@@ -121,7 +122,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:inputType="textVisiblePassword|textCapSentences"
-                            android:maxLength="60"
+                            android:maxLength="50"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
