--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -19,11 +19,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/mask_group_16"
+                android:orientation="horizontal"
                 android:paddingStart="@dimen/_21sdp"
                 android:paddingTop="@dimen/_46sdp"
-                android:paddingBottom="@dimen/_16sdp"
-                android:background="@drawable/mask_group_16"
-                android:orientation="horizontal">
+                android:paddingBottom="@dimen/_16sdp">
 
                 <RelativeLayout
                     android:layout_width="@dimen/_50sdp"
@@ -35,9 +35,9 @@
                         android:id="@+id/iv_user_icon"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:padding="2dp"
                         android:contentDescription="@string/user_details"
+                        android:padding="2dp"
+                        android:scaleType="fitXY"
                         android:src="@drawable/acct_profile"
                         android:visibility="visible" />
 
@@ -76,6 +76,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:orientation="vertical">
 
                     <TextView
@@ -149,6 +150,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -591,6 +593,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -634,7 +637,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_11sdp"
-
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/all_p_deposit"
@@ -644,7 +646,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-
+                                android:layout_marginStart="@dimen/_3sdp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="@string/businesstoken"
@@ -661,7 +663,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_11sdp"
-
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="@string/ac"
@@ -671,7 +672,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/a_u_pay"
@@ -1091,7 +1091,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:background="@color/white"
                     android:orientation="vertical">
 
                     <LinearLayout
