--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -337,7 +337,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="Coyni@example.com"
+                        android:hint="Email"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
