--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -646,7 +646,7 @@
                         android:paddingTop="@dimen/_11sdp">
 
                         <LinearLayout
-                            android:id="@+id/cpResetPin"
+                            android:id="@+id/businessResetPin"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
