--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_view_color"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,8 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/close"
                 android:onClick="onCloseClicked"
-                android:contentDescription="@string/rotate_phone_sign"
                 android:src="@drawable/ic_close" />
 
             <TextView
@@ -46,28 +47,28 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/_17sdp"
             android:layout_marginStart="@dimen/_46sdp"
+            android:layout_marginTop="@dimen/_17sdp"
             android:layout_marginEnd="@dimen/_46sdp"
-            android:background="@color/white"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:background="@color/white">
 
             <com.greenbox.coyni.utils.CustomSignatureView
                 android:id="@+id/csv_signature_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_46sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/opensans_semibold"
             android:lineSpacingExtra="9.3sp"
-            android:text="@string/clear"
             android:onClick="onClearClicked"
             android:padding="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginStart="@dimen/_46sdp"
+            android:text="@string/clear"
             android:textColor="@color/primary_green"
             android:textSize="@dimen/_16ssp"
             android:textStyle="normal" />
@@ -79,13 +80,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent_black"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_margin="@dimen/_40sdp"
+            android:layout_marginStart="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_40sdp"
+            android:layout_marginEnd="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_40sdp"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
             android:lineSpacingExtra="10.7sp"
